syntax = "proto3"; // Указываем синтаксис используемого протокола Protobuf (в данном случае версия 3).

package user; // Определяем пакет, чтобы группировать сообщения и сервисы логически.

service UserService { // Сервис для работы с пользователями.
  rpc CreateUser (CreateUserRequest) returns (UserResponse); // Метод для создания нового пользователя.
  rpc GetUser (GetUserRequest) returns (UserResponse); // Метод для получения информации о пользователе по его ID.
}

message CreateUserRequest { // Сообщение-запрос для создания нового пользователя.
  string name = 1; // Имя пользователя.
  string email = 2; // Электронная почта пользователя.
}

message GetUserRequest { // Сообщение-запрос для получения информации о пользователе.
  string userId = 1; // Уникальный идентификатор пользователя.
}

message UserResponse { // Сообщение-ответ, содержащее информацию о пользователе.
  string userId = 1; // Уникальный идентификатор пользователя.
  string name = 2; // Имя пользователя.
  string email = 3; // Электронная почта пользователя.
}
